syntax = "proto3";

package logger.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

// logs is 
service LoggerService {
  // adding new logs.
  rpc Create(CreateRequest) returns (CreateResponse){
     option (google.api.http) = {
      post : "/Create"
      body : "*"
    };
    // option (event.subscription) = {
    //   pubsub_name : "pubsub"
    //   topic : "log.update"
    //   payload : "*"
    // };
  };  

  // quering logs.
  rpc Query(QueryRequest) returns (QueryResponse){
     option (google.api.http) = {
      post : "/Query"
      body : "*"
    };
  };

  // retrieving log.
  rpc Get(GetRequest) returns (GetResponse){
     option (google.api.http) = {
      post : "/Get"
      body: "*"
    };
  };

  // UpdateRequest is used to specify a log to update.
  rpc Update(UpdateRequest) returns (UpdateResponse){
     option (google.api.http) = {
        post : "/Update"
        body : "*"
    };
  };

    // Delete removes logs
  rpc Delete(DeleteRequest) returns (DeleteResponse){
     option (google.api.http) = {
       post : "/Delete"
       body : "*"
    };
  };
}

// Create contains information needed to create a new log.
message CreateRequest  { Log log = 1[ (validate.rules).message.required = true ]; }
// CreateResponse returns the newly created log for the Create method.
message CreateResponse { 
  Log log = 1;
 }

// Query is used to specify the log to retrieve.
message QueryRequest  { 
  int64 offset = 1 [ (validate.rules).int64.gte = 0 ];
  int64 limit = 2 [ (validate.rules).int64.gte = 0 ];
  string log_id = 3; 
}
// QueryResponse returns a paged list of logs
message QueryResponse  { 
  repeated Log cursor = 1;
  int64 matches = 2;
}

// Get is used to specify the log to retrieve.
message GetRequest {  string log_id = 1 [ (validate.rules).string.uuid = true ]; }
// GetResponse returns an log based on the log id
message GetResponse { Log log = 1; }

// Update is used to specify a log to update.
message UpdateRequest  { 
  string log_id = 1 [ (validate.rules).string.uuid = true ];
  Log log = 2;
  google.protobuf.FieldMask update_mask = 3;
}
// UpdateResponse returns an updated log based on the one provided
message UpdateResponse { Log log = 1; }


// Delete contains information needed to remove a log
message DeleteRequest { string log_id = 1 [ (validate.rules).string.uuid = true ];}
// DeleteResponse returns an empty response and can be ignored.
message DeleteResponse {}

// log represents a platform log uploaded by a specialist
message Log {
  string id = 1 [ (validate.rules).string.uuid = true ];
  string log_id = 2 [ (validate.rules).string.uuid = true ];
  string name = 3 [ (validate.rules).string.min_len = 1 ];
  int64 date = 4; 
  DailySummary  daily_summary = 5; 
  bool checked = 6;
  string additional_notes = 7;
}

// daily summary of the log
message DailySummary {
  Mood mood = 1;
  Symptoms symptoms = 2;
}
// symptoms log experiences daily
message Symptoms {
  bool acne = 1;
  bool bloating = 2;
  bool body_aches = 3;
  bool constipation = 4;
  bool cramps = 5;
  bool cravings = 6;
  bool diarrea = 7;
  bool fatigue = 8;
  bool headaches = 9;
  bool nausea = 10;
  bool insomnia = 11;
  bool sensitivity = 12;
}
// mood log experiences daily
message Mood {
  bool fine = 1;
  bool happy = 2;
  bool energetic = 3;
  bool motivated = 4;
  bool emotional = 5;
  bool overwhelmed = 6;
  bool irritatable = 7;
  bool frustrated = 8;
}